[fix] aligned guideBtn and themeBtn

--- a/net-perf/src/styles/sass/main.scss
+++ b/net-perf/src/styles/sass/main.scss
@@ -85,6 +85,7 @@ div#logo {
 .themeBtn {
 	display: flex;
 	justify-content: end;
+	align-items: center;
 	padding: 20px;
 }
 
@@ -116,4 +117,8 @@ div#title_container {
 	}
 }
 
+.btnContainer {
+	display: flex;
+	justify-content: space-between;
+}
 /*# sourceMappingURL=main.css.map */
